# Linker

./: README.md
src/: Makefile  elf_section_header.c  elf_struct.h  fusion.c  fusion.h  fusion_reimp.c  fusion_reimp.h  fusion_symb.c  fusion_symb.h  gestion_elf.c  gestion_elf.h  global_struct.h  header_elf.c  header_elf.h  init.c  init.h  linker  linker.c  linker.h  linker_base.c  linker_base.h  program_header  program_header.c  program_reimplantation.c  program_section_content.c  program_section_header  program_section_header.c  program_table_symbole  program_table_symbole.c  reimplantation.c  reimplantation.h  section_elf.c  section_elf.h  section_header.c  section_header.h  shstrtab_apres.txt  shstrtab_avant.txt  struct_elf.h  table_symbole.c  table_symbole.h  (+2 more)
src/Automake/: Makefile  Makefile.am  confdefs.h  config.status
src/Examples_fusion/: Makefile  config.status
